# quant-edge-explorer

./: .gitignore  CLAUDE.md  prd_web_app.md  pyproject.toml
app/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/src/: App.tsx
app/src/components/artifacts/: ArtifactRenderer.tsx  ChartArtifact.tsx  CitationArtifact.tsx  QualityFlagMenu.tsx  TableArtifact.tsx
app/src/components/chat/: ConversationSidebar.tsx  InputBox.tsx  MessageBubble.tsx  MessageList.tsx  PlanCard.tsx  StreamingIndicator.tsx  ToolCallCard.tsx
app/src/components/errors/: ConnectionStatus.tsx  ErrorBoundary.tsx
app/src/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  scroll-area.tsx
app/src/hooks/: useConversation.ts  useConversationList.ts  useServerHealth.ts
app/src/lib/: api.ts  sse.ts  types.ts  utils.ts
app/src/routes/: ChatRoute.tsx
app/src/styles/: globals.css
config/: chart_registry.yaml  priors.yaml
src/explorer/: agent.py  canonical_charts.py  chart_engine.py  cli_render.py  connections.py  main.py  system_prompt.py  tool_handlers.py  tools.py
src/explorer/history/: __init__.py  db.py  repository.py  schema.sql
src/server/: __init__.py  app.py  cli.py  config.py  dependencies.py  schemas.py  titles.py
src/server/routers/: artifacts.py  chat.py  conversations.py
tests/: conftest.py  test_agent_loop.py  test_chart_engine.py  test_cli_render.py  test_history_db.py  test_server_routes.py  test_system_prompt.py  test_tools.py
